--- a/www/posn01/SP2/map/index.html
+++ b/www/posn01/SP2/map/index.html
@@ -25,12 +25,16 @@
         <a href="../mainpage/index.html">Domů</a>
         <a class="active" href="index.html">Mapa</a>
     </nav>
+    
     <main>
         <h1 class="name">BEZOBALOVÁ MAPA</h1>
 
         <nav class="adress">
             <input id="autocomplete" placeholder="vložte adresu" type="text"></input>
         </nav>
+        <div id="container">
+            <ul id></ul>
+        </div>
         <div id="map"></div>
     </main>
 
@@ -44,8 +48,12 @@
         src="https://maps.googleapis.com/maps/api/place/details/json?place_id=ChIJN1t_tDeuEmsRUsoyG83frY4&fields=name,rating,formatted_phone_number&key=AIzaSyCtk9HDEtvG_FPhSt8dfVSE3IVEnQgF7HU"
         defer>
         </script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+
+    
 </body>
 
 </html>
